--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <html>
 <head>
+  <title>Page Title</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
 <body>
-<a href="page-transitions-page.html" data-transition="slide" class="ui-btn ui-corner-all ui-shadow ui-btn-inline">page</a></td>
+<div data-role="page">
+  <div data-role="header">
+    <h1> INI header </h1>
 
+</div>
+<center>
+<a href="#page2" data-transition="slide" class="ui-btn ui-corner-all ui-shadow ui-btn-inline">page</a>
+</center>
 </body>
 </html>
