--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
 <div data-role="page">
   <div data-role="header">
     <h1> INI header </h1>
-
+  </div>
+  <div data-role="content">
+    <center>
+      <a href="#page2" data-transition="slide" class="ui-btn ui-corner-all ui-shadow ui-btn-inline">page</a>
+    </center>
+  </div>
+  <div data-role="page" id="page2">
+  		<div data-role="header" data-theme="b" data-add-back-btn="true">
+  			<h3> halaman 2 </h3>
+  		</div>
+  		<div data-role="content">
+  		</div>
+  </div>
 </div>
-<center>
-<a href="#page2" data-transition="slide" class="ui-btn ui-corner-all ui-shadow ui-btn-inline">page</a>
-</center>
 </body>
 </html>
