--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </div>
   <div data-role="content">
     <center>
-      <a href="#page2" data-transition="slide" class="ui-btn ui-corner-all ui-shadow ui-btn-inline">page</a>
+      <a href="#page2" data-transition="slide">page</a>
     </center>
   </div>
   <div data-role="page" id="page2">
