--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
   <title>Page Title</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+  <script src="jquery.js"></script>
+  <script src="jquery.mobile-1.4.5.js"></script>
+  <link rel="stylesheet" href="jquerym/jquery.mobile-1.4.5.css">
 </head>
 <body>
 <div data-role="page">
@@ -13,7 +13,7 @@
   </div>
   <div data-role="content">
     <center>
-      <a href="#page2" data-transition="slide">page</a>
+      <a href="#page2" data-transition="slide" class="ui-btn ui-corner-all ui-shadow ui-btn-inline">page</a>
     </center>
   </div>
   <div data-role="page" id="page2">
