--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1> INI header </h1>
     <div data-role="navbar">
     <ul>
-        <li><a href="#page2" data-transition="slide" class="ui-btn-active">One</a></li>
-        <li><a href="#">Two</a></li>
-        <li><a href="#">Three</a></li>
+        <li><a href="#page" class="ui-btn-active">Home</a></li>
+        <li><a href="#page2" data-transition="slide">About us </a></li>
+        <li><a href="#page3" data-transition="slideup">My profile</a></li>
     </ul>
 </div><!-- /navbar -->
   </div>
@@ -22,6 +22,8 @@
 
   </div>
 </div>
+<!---Page2---->
+
   <div data-role="page" id="page2">
   		<div data-role="header" data-theme="b" data-add-back-btn="true">
   			<h3> halaman 2 </h3>
@@ -29,6 +31,16 @@
   		<div data-role="content">
   		</div>
   </div>
+<!---Page3--->
+
+  <div data-role="page" id="page3">
+  		<div data-role="header" data-theme="b" data-add-back-btn="true">
+  			<h3> halaman 2 </h3>
+  		</div>
+  		<div data-role="content">
+  		</div>
+  </div>
+
 
 </body>
 </html>
